feat: distilBERT fine-tuning

--- a/main.ipynb
+++ b/main.ipynb
@@ -4256,6 +4256,254 @@
         "train_ds.set_format(\"torch\")\n",
         "val_ds.set_format(\"torch\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "f9b24db6",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "training_args = TrainingArguments(\n",
+        "    output_dir=\"./distilbert-finetuned\",\n",
+        "    eval_strategy=\"epoch\",\n",
+        "    save_strategy=\"epoch\",\n",
+        "    learning_rate=2e-5,\n",
+        "    per_device_train_batch_size=32,\n",
+        "    per_device_eval_batch_size=32,\n",
+        "    num_train_epochs=6,\n",
+        "    weight_decay=0.01,\n",
+        "    load_best_model_at_end=True,\n",
+        "    metric_for_best_model=\"accuracy\",\n",
+        "    logging_dir=\"./logs\",\n",
+        "    report_to=\"none\",\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "7a610bbc",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "from sklearn.metrics import accuracy_score, precision_recall_fscore_support"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "004d376f",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def compute_metrics(eval_pred):\n",
+        "    logits, labels = eval_pred\n",
+        "    preds = np.asarray(logits).argmax(axis=-1)\n",
+        "    precision, recall, f1, _ = precision_recall_fscore_support(labels, preds, average=\"weighted\")\n",
+        "    acc = accuracy_score(labels, preds)\n",
+        "\n",
+        "    return {\n",
+        "        \"accuracy\": acc,\n",
+        "        \"f1\": f1,\n",
+        "        \"precision\": precision,\n",
+        "        \"recall\": recall\n",
+        "    }"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b75632a5",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "trainer = Trainer(\n",
+        "    model=model,\n",
+        "    args=training_args,\n",
+        "    train_dataset=train_ds,\n",
+        "    eval_dataset=val_ds,\n",
+        "    compute_metrics=compute_metrics,\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "8c17eeb5",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "\n",
+              "    <div>\n",
+              "      \n",
+              "      <progress value='2070' max='2070' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [2070/2070 13:18, Epoch 6/6]\n",
+              "    </div>\n",
+              "    <table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              " <tr style=\"text-align: left;\">\n",
+              "      <th>Epoch</th>\n",
+              "      <th>Training Loss</th>\n",
+              "      <th>Validation Loss</th>\n",
+              "      <th>Accuracy</th>\n",
+              "      <th>F1</th>\n",
+              "      <th>Precision</th>\n",
+              "      <th>Recall</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <td>1</td>\n",
+              "      <td>No log</td>\n",
+              "      <td>0.984434</td>\n",
+              "      <td>0.640886</td>\n",
+              "      <td>0.642355</td>\n",
+              "      <td>0.644709</td>\n",
+              "      <td>0.640886</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>2</td>\n",
+              "      <td>0.291100</td>\n",
+              "      <td>1.169390</td>\n",
+              "      <td>0.653595</td>\n",
+              "      <td>0.653304</td>\n",
+              "      <td>0.653668</td>\n",
+              "      <td>0.653595</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>3</td>\n",
+              "      <td>0.190500</td>\n",
+              "      <td>1.320630</td>\n",
+              "      <td>0.655410</td>\n",
+              "      <td>0.653344</td>\n",
+              "      <td>0.658834</td>\n",
+              "      <td>0.655410</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>4</td>\n",
+              "      <td>0.190500</td>\n",
+              "      <td>1.560002</td>\n",
+              "      <td>0.654321</td>\n",
+              "      <td>0.650366</td>\n",
+              "      <td>0.663183</td>\n",
+              "      <td>0.654321</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>5</td>\n",
+              "      <td>0.105900</td>\n",
+              "      <td>1.661265</td>\n",
+              "      <td>0.660857</td>\n",
+              "      <td>0.660262</td>\n",
+              "      <td>0.661868</td>\n",
+              "      <td>0.660857</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>6</td>\n",
+              "      <td>0.067600</td>\n",
+              "      <td>1.715694</td>\n",
+              "      <td>0.664488</td>\n",
+              "      <td>0.663537</td>\n",
+              "      <td>0.666682</td>\n",
+              "      <td>0.664488</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table><p>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/plain": [
+              "TrainOutput(global_step=2070, training_loss=0.1603364856922684, metrics={'train_runtime': 799.4197, 'train_samples_per_second': 82.665, 'train_steps_per_second': 2.589, 'total_flos': 2188532921877504.0, 'train_loss': 0.1603364856922684, 'epoch': 6.0})"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "trainer.train()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "8e2f8fce",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "\n",
+              "    <div>\n",
+              "      \n",
+              "      <progress value='87' max='87' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [87/87 00:08]\n",
+              "    </div>\n",
+              "    "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/plain": [
+              "{'eval_loss': 1.7156940698623657,\n",
+              " 'eval_accuracy': 0.664488017429194,\n",
+              " 'eval_f1': 0.6635370866007028,\n",
+              " 'eval_precision': 0.6666822907563649,\n",
+              " 'eval_recall': 0.664488017429194,\n",
+              " 'eval_runtime': 8.5617,\n",
+              " 'eval_samples_per_second': 321.663,\n",
+              " 'eval_steps_per_second': 10.161,\n",
+              " 'epoch': 6.0}"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "trainer.evaluate()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "16c14c51",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "('./distilbert-finetuned/tokenizer_config.json',\n",
+              " './distilbert-finetuned/special_tokens_map.json',\n",
+              " './distilbert-finetuned/vocab.txt',\n",
+              " './distilbert-finetuned/added_tokens.json',\n",
+              " './distilbert-finetuned/tokenizer.json')"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "trainer.save_model(\"./distilbert-finetuned\")\n",
+        "tokenizer.save_pretrained(\"./distilbert-finetuned\")"
+      ]
     }
   ],
   "metadata": {
