paper: write related work chapter and add bibtex refs

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -10,4 +10,9 @@
     \institute {Babe\c{s}-Bolyai University \\ \email{paul.uifalean@stud.ubbcluj.ro}}
     
     \maketitle 
+
+    \input{sections/related-work}
+    
+    \bibliographystyle{splncs04}
+    \bibliography{references}
 \end{document}
