paper: write dataset chapter

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -1,5 +1,8 @@
 \documentclass[runningheads]{llncs}
 
+\usepackage[T1]{fontenc}
+\usepackage{booktabs}
+
 \begin{document}
     \title{Title}
     \titlerunning{Title}
@@ -12,7 +15,8 @@
     \maketitle 
 
     \input{sections/related-work}
-    
+    \input{sections/data}
+
     \bibliographystyle{splncs04}
     \bibliography{references}
 \end{document}
