paper: write methodology and results chapters

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -1,6 +1,7 @@
 \documentclass[runningheads]{llncs}
 
 \usepackage[T1]{fontenc}
+\usepackage{graphicx}
 \usepackage{booktabs}
 
 \begin{document}
@@ -16,6 +17,8 @@
 
     \input{sections/related-work}
     \input{sections/data}
+    \input{sections/methodology}
+    \input{sections/results}
 
     \bibliographystyle{splncs04}
     \bibliography{references}
